k8s/xray.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray
  namespace: prod
spec:
  replicas: 1
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: xray
  template:
    metadata:
      labels:
        app: xray
    spec:
      hostNetwork: true
      containers:
      - name: xray
        image: teddysun/xray:latest
        ports:
        - containerPort: 8443
          hostPort: 8443
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/xray
      volumes:
      - name: config-volume
        configMap:
          name: xray-config
