k8s/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: prod
spec:
  replicas: 1
  strategy:
    type: Recreate
    # rollingUpdate:
    #   maxSurge: 0
    #   maxUnavailable: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      hostNetwork: true # Нужно, чтобы достучаться до 127.0.0.1:8443 (Xray)
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: manager-sa
      containers:
      - name: manager
        image: registry.gitlab.com/i.rusakov7887/auto-sec-gateway/manager:8e5a4c0-1776166116
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  namespace: prod
spec:
  selector:
    app: manager
  ports:
  - port: 80 # Порт, который будет слушать Сервис
    targetPort: 8080 # Порт твоей программы на Go
