k8s/test-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-page
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
  namespace: prod
spec:
  selector:
    app: welcome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
